--- a/src/styles/_bootstrapFixes.scss
+++ b/src/styles/_bootstrapFixes.scss
@@ -13,6 +13,7 @@
 }
 
 .center-block {
+  display: inline-block;
   float: none;
 }
 
